Updated profile page added scoped status updates to it

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,10 @@ jason:
   last_name: "Seifer"
   profile_name: "jasonseifer"
   email: "jason@teamtreehouse.com"
+
+
+jim:
+  first_name: "Jim"
+  last_name: "Hoskins"
+  profile_name: "jimhoskins"
+  email: "jim@teamtreehouse.com"
